force-app/main/default/objects/R_Club_Number__c/R_Club_Number__c.object-meta.xml
<CustomObject>
    <label>R Club Number</label>
    <nameField>
        <displayFormat>R{000000}</displayFormat>
        <label>SFSC System Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R Club Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>