force-app/main/default/objects/R_Club_Number__c/fields/Loyalty_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Opt_In_Date__c</fullName>
    <label>Loyalty Opt In Date</label>
    <type>Date</type>
</CustomField>