force-app/main/default/objects/R_Club_Number__c/fields/R_Club_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>R_Club_Join_Date__c</fullName>
    <label>R Club Join Date</label>
    <type>Date</type>
</CustomField>