force-app/main/default/objects/R_Club_Number__c/fields/R_Club_Number__c.field-meta.xml
<CustomField>
    <fullName>R_Club_Number__c</fullName>
    <externalId>true</externalId>
    <label>R Club Number</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>