force-app/main/default/objects/R_Club_Number__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Notes the store where signup occurred, if applicable.</inlineHelpText>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>R Club Signups</relationshipLabel>
    <relationshipName>R_Club_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>